<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hermes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_get_keypair">Get KeyPair</string>
    <string name="action_delete_keypair">Delete KeyPair</string>
    <string name="action_test">Test</string>
    <string name="signon_input_hint">Password</string>
    <string name="signon_btn_label">Sign On</string>
    <string name="action_sign_off">Sign Off</string>
    <string name="no_contacts_message">No Contacts Found</string>
    <string name="action_contact_add">Add Contact</string>
    <string name="action_address_qr_code">My Address</string>
    <string name="title_activity_scan_contact">Scan Contact</string>
    <string name="title_activity_qr_display">Your Address QR Code</string>
    <string name="dismiss_button">Dismiss</string>
    <string name="qr_code_image">QR Code Image</string>
    <string name="title_getname_dialog">Contact Name</string>
    <string name="message_getname_dialog">Set Contact Name</string>
    <string name="label_getname_dialag_save">Save</string>
    <string name="label_getname_dialag_cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_contact">Contact</string>

    <string name="gcm_sender_key">AIzaSyBByq5IBjxASCpzz6KggkXImbxWgs-7y9w</string>
    <string name="gcm_sender_id">323620638301</string>
    <string name="gcm_message_field_message">hermes_message</string>
    <string name="no_messages_message">No Messages</string>
    <string name="name_placeholder">Name Placeholder</string>
    <string name="message_input_hint">Message</string>
    <string name="button_message_send_label">Send</string>
</resources>
