<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity" >
    <!--<item android:id="@+id/action_settings"-->
        <!--android:title="@string/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:showAsAction="never" />-->
    <item android:id="@+id/action_sign_off"
          android:title="@string/action_sign_off"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/action_get_keypair"
          android:title="@string/action_get_keypair"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/action_delete_keypair"
          android:title="@string/action_delete_keypair"
          android:orderInCategory="100"
          app:showAsAction="never" />
</menu>
