<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alangeorge.android.hermes.ContactDetailActivity.ContactDetailFragment"
    android:orientation="vertical">


    <TextView
        android:text="@string/name_placeholder"
        android:id="@+id/contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@android:id/list"
        android:dividerHeight="2dip"
        android:footerDividersEnabled="false"
        android:fastScrollEnabled="false"
        android:layout_below="@id/contact_name"/>


    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_messages_message"
        android:layout_below="@id/contact_name"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send Message"
        android:id="@+id/send_button"
        android:layout_alignParentBottom="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message_text"
        android:layout_above="@id/send_button"
        android:hint="@string/message_input_hint"/>

</RelativeLayout>
